# analytics-python-client

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  conftest.py  couchbase_analytics_version.py  dev_requirements.txt  mypy.ini  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements-sphinx.txt  requirements.in  requirements.txt  setup.py  sphinx_requirements.txt
.github/workflows/: publish.yml  tests.yml  verify_release.yml
acouchbase_analytics/: __init__.py  cluster.py  cluster.pyi  database.py  database.pyi  options.py  query_handle.py  scope.py  scope.pyi
acouchbase_analytics/protocol/: cluster.py  cluster.pyi  database.py  database.pyi  errors.py  query_handle.py  scope.py  scope.pyi  streaming.py
acouchbase_analytics/tests/: connect_integration_t.py  connection_t.py  credential_t.py  json_parsing_t.py  options_t.py  query_integration_t.py  query_options_t.py  start_query_integration_t.py  start_query_options_t.py  test_server_t.py
couchbase_analytics/: __init__.py  _version.py  cluster.py  cluster.pyi  database.py  database.pyi  errors.py  query_handle.py  scope.py  scope.pyi
couchbase_analytics/common/: __init__.py  backoff_calculator.py  credential.py  enums.py  errors.py  logging.py  options.py  options_base.py  query.py  query_handle.py  request.py  result.py  streaming.py
couchbase_analytics/protocol/: __init__.py  cluster.py  cluster.pyi  connection.py  database.py  database.pyi  errors.py  options.py  query_handle.py  scope.py  scope.pyi  (+1 more)
docs/: conf.py
tests/: __init__.py  analytics_config.py  test_config.ini
(+101 files in other folders)
